[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/game/items/resume/detail_payment_panel.gd" type="Script" id=1]

[node name="DetaiPaymentlPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="TextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_DetaiPaymentlPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DetaiPaymentlPanel_mouse_exited"]
